--- a/build.gradle
+++ b/build.gradle
@@ -11,16 +11,21 @@ repositories {
 }
 
 dependencies {
-    providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
-    compile group: 'javax.servlet', name: 'jstl', version: '1.2'
-    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
     compile group: 'org.springframework', name: 'spring-core', version: '4.3.17.RELEASE'
     compile group: 'org.springframework', name: 'spring-context', version: '4.3.17.RELEASE'
     compile group: 'org.springframework', name: 'spring-beans', version: '4.3.17.RELEASE'
     compile group: 'org.springframework', name: 'spring-web', version: '4.3.17.RELEASE'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+
     compile group: 'org.springframework', name: 'spring-webmvc', version: '4.3.17.RELEASE'
+
+    //JSP
+    providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.22'
+    compile group: 'javax.servlet', name: 'jstl', version: '1.2'
+
+    //Thymeleaf
     compile group: 'org.thymeleaf', name: 'thymeleaf-spring4', version: '3.0.9.RELEASE'
     compile group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '2.3.0'
 }
